# VanFoCO

./: .gitignore  BUILD.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FINAL_DELIVERABLE.md  PRODUCTION_READINESS.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  projects.json
cli/src/: main.rs
crates/core_engine/: Cargo.toml  grammar.pest
crates/core_engine/src/: ast.rs  executor.rs  ir.rs  job_queue.rs  kernels_cpu.rs  lib.rs  stats.rs
docs/: CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  PRODUCT_SPEC.md  UI_UX_SPEC.md  manifest_schema.json
docs/spec/: grammar.ebnf
dsl_examples/: adiabatic_optimization.phys  error_correction.phys  identities.phys  quantum_walk.phys  quantum_zeno.phys  rabi.phys  rabi_measurements.csv  spin_chain.phys  teleportation.phys
projects/: README.md
projects/quantum-theory-engine/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GUI_README.md  PRODUCTION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_PRODUCTION.md  README_v1.md  RETRO_UI_README.md  USER_TUTORIAL.md  gui_app.py  install-gui.sh  install-web.sh  install.sh  qte  qte.sh  retro_ui.py  web_ui.py
projects/quantum-theory-engine/.github/workflows/: ci.yml
projects/quantum-theory-engine/benches/: production_benchmarks.rs
projects/quantum-theory-engine/cli/: Cargo.toml
projects/quantum-theory-engine/crates/core_engine/: Cargo.toml
projects/quantum-theory-engine/crates/core_engine/src/: error.rs  logging.rs  lowering.rs  ode.rs  optimizer.rs  parser.rs  prover.rs  streaming.rs  templates.rs  typechecker.rs  validator.rs
projects/quantum-theory-engine/crates/core_engine/tests/: parser_tests.rs
projects/quantum-theory-engine/docs/: ARCHITECTURE.md  DSL_SPEC.md
projects/quantum-theory-engine/dsl_examples/: amp_damp.phys  bell_states.phys  deutsch_jozsa.phys  jaynes_cummings.phys  phase_estimation.phys  qaoa.phys  vqe_chemistry.phys
projects/quantum-theory-engine/python_bindings/: pyproject.toml
projects/quantum-theory-engine/scripts/: validate.sh  verify_production.sh
projects/quantum-theory-engine/tests/: integration_tests.rs  pipeline_tests.rs
python_bindings/quantum_theory_engine/: __init__.py
python_bindings/src/: lib.rs
scripts/: generate_notebooks.py
tests/: parser_tests.rs
