[workspace]
members = ["crates/core_engine", "cli", "python_bindings"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantum Theory Engine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/quantum-theory-engine"

[workspace.dependencies]
# Linear algebra and numerics
ndarray = "0.15"
ndarray-linalg = "0.16"
blas-src = { version = "0.10", features = ["openblas"] }
lapack-src = { version = "0.10", features = ["openblas"] }
num-complex = "0.4"
num-traits = "0.2"

# Sparse matrices
sprs = "0.11"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Optimization
argmin = "0.10"
argmin-math = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File watching
notify = "6.1"

# WebSocket
tokio-tungstenite = "0.21"

# Random number generation
rand = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Lazy statics
once_cell = "1.19"

# Testing and benchmarking
approx = "0.5"
criterion = "0.5"
