[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quantum-theory-engine"
version = "0.1.0"
description = "Industrial-grade quantum simulation and theory-testing framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Quantum Theory Engine Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "h5py>=3.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/quantum-theory-engine"
Documentation = "https://quantum-theory-engine.readthedocs.io"
Repository = "https://github.com/yourusername/quantum-theory-engine"

[tool.maturin]
module-name = "quantum_theory_engine._core"
python-source = "quantum_theory_engine"
features = ["pyo3/extension-module"]
