[package]
name = "quantum-theory-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Linear algebra
ndarray.workspace = true
ndarray-linalg.workspace = true
blas-src.workspace = true
lapack-src.workspace = true
num-complex.workspace = true
num-traits.workspace = true

# Sparse matrices
sprs.workspace = true

# Parsing
pest.workspace = true
pest_derive.workspace = true

# Optimization
argmin.workspace = true
argmin-math.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
# hdf5.workspace = true  # Optional - disabled for simpler build

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# File watching
notify.workspace = true

# WebSocket
tokio-tungstenite.workspace = true

# Random number generation
rand.workspace = true

# UUID generation
uuid.workspace = true

# Date/time
chrono.workspace = true

# Lazy statics
once_cell.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "production_benchmarks"
harness = false
path = "../../benches/production_benchmarks.rs"
